// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Button component should render a link when btnType equals link and href is provided 1`] = `
.c0 {
  color: #222222;
  background-color: transparent;
  border: 1px solid transparent;
  width: 180px;
  text-align: center;
  display: inline-block;
}

.c0:hover {
  color: #222222;
  background: 141414;
  border-color: a0a0a;
}

.c0:focus,
.c0.focus {
  color: #222222;
  background: 141414;
  border-color: a0a0a;
}

.c0:disabled,
.c0.disabled {
  color: #222222;
  background: transparent;
  border-color: transparent;
}

<a
  class="c0"
  data-testid="link"
  href="http://www.farfetch.com"
  width="180px"
>
  Link
</a>
`;

exports[`test Button component should render disabled button when disabled set to true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  padding: 0 0.75rem;
  height: 3rem;
  font-family: 'PingFangSC-Regular','sans-serif','Helvetica Neue For Number','-apple-system',BlinkMacSystemFont,'Segoe UI',Roboto,'Hiragino Sans GB','Microsoft YaHei','Helvetica Neue',Helvetica,Arial;
  font-size: 1rem;
  line-height: 3rem;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  width: 180px;
  text-align: center;
  color: #ffffff;
  background-color: #bfbfbf;
  border: 1px solid #bfbfbf;
}

.c0:hover {
  color: #ffffff;
  background: #d3d3d3;
  border-color: #c9c9c9;
}

.c0:focus,
.c0.focus {
  color: #ffffff;
  background: #d3d3d3;
  border-color: #c9c9c9;
}

.c0:disabled,
.c0.disabled {
  color: #ffffff;
  background: #bfbfbf;
  border-color: #bfbfbf;
}

.c0 span {
  width: 100%;
}

<button
  class="c0"
  data-testid="disabled"
  disabled=""
  width="180px"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`test Button component should render the correct component based on different props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  padding: 0 0.75rem;
  height: 3rem;
  font-family: 'PingFangSC-Regular','sans-serif','Helvetica Neue For Number','-apple-system',BlinkMacSystemFont,'Segoe UI',Roboto,'Hiragino Sans GB','Microsoft YaHei','Helvetica Neue',Helvetica,Arial;
  font-size: 1rem;
  line-height: 3rem;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  width: 100px;
  text-align: center;
  color: #ffffff;
  background-color: #222222;
  border: 1px solid #222222;
}

.c0:hover {
  color: #ffffff;
  background: #363636;
  border-color: #2c2c2c;
}

.c0:focus,
.c0.focus {
  color: #ffffff;
  background: #363636;
  border-color: #2c2c2c;
}

.c0:disabled,
.c0.disabled {
  color: #ffffff;
  background: #222222;
  border-color: #222222;
}

.c0 span {
  width: 100%;
}

<button
  class="c0 testBtn"
  data-testid="testProps"
  width="100px"
>
  <span>
    test Props
  </span>
</button>
`;

exports[`test Button component should render the correct default button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  padding: 0 0.75rem;
  height: 3rem;
  font-family: 'PingFangSC-Regular','sans-serif','Helvetica Neue For Number','-apple-system',BlinkMacSystemFont,'Segoe UI',Roboto,'Hiragino Sans GB','Microsoft YaHei','Helvetica Neue',Helvetica,Arial;
  font-size: 1rem;
  line-height: 3rem;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  width: 180px;
  text-align: center;
  color: #222222;
  background-color: #ffffff;
  border: 1px solid #222222;
}

.c0:hover {
  color: #222222;
  background: #ffffff;
  border-color: #2c2c2c;
}

.c0:focus,
.c0.focus {
  color: #222222;
  background: #ffffff;
  border-color: #2c2c2c;
}

.c0:disabled,
.c0.disabled {
  color: #222222;
  background: #ffffff;
  border-color: #222222;
}

.c0 span {
  width: 100%;
}

<button
  class="c0"
  data-testid="default"
  width="180px"
>
  <span>
    Default
  </span>
</button>
`;
